doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Kyle H\Desktop\objectTechProject
-d
C:\Users\Kyle H\Desktop\objectTechProject\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java
<---- end of javadoc command ---->
Loading source file C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java...
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:14: error: illegal start of expression
			Project proj = new Project(projectName,projectType,...);
			                                                   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:14: error: ';' expected
			Project proj = new Project(projectName,projectType,...);
			                                                      ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:15: error: illegal start of expression
			.......
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:15: error: illegal start of expression
			.......
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:15: error: ';' expected
			.......
			      ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:16: error: illegal start of expression
			.......
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:16: error: ';' expected
			.......
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:16: error: illegal start of expression
			.......
			      ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:16: error: ';' expected
			.......
			       ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:17: error: illegal start of expression
			.......
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:17: error: ';' expected
			.......
			      ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:32: error: illegal start of expression
		...
		^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:33: error: illegal start of expression
		...
		^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:33: error: ';' expected
		...
		   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:63: error: illegal start of expression
		...
		^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:64: error: illegal start of expression
		...
		^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:64: error: ';' expected
		...
		   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:77: error: illegal start of expression
			Consultant newCon = new Consultant(consultantName,....);
			                                                  ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:77: error: <identifier> expected
			Consultant newCon = new Consultant(consultantName,....);
			                                                      ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:80: error: illegal start of expression
			...
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:81: error: illegal start of expression
			...
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:81: error: ';' expected
			...
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:95: error: <identifier> expected
	public String getOwner(String projectID,String ){
	                                              ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:108: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:109: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:109: error: ';' expected
			...		
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:126: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:127: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:127: error: ';' expected
			...		
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:141: error: ';' expected
	public String addActivity(String projectID,String activityName,String activityDescription)){
	                                                                                          ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:143: error: illegal start of expression
			Consultant newActiv = new Activity(activityName,....);
			                                                ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:143: error: <identifier> expected
			Consultant newActiv = new Activity(activityName,....);
			                                                    ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:146: error: illegal start of expression
			...
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:147: error: illegal start of expression
			...
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:147: error: ';' expected
			...
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:164: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:165: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:165: error: ';' expected
			...		
			   ^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:183: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:184: error: illegal start of expression
			...		
			^
C:\Users\Kyle H\Desktop\objectTechProject\ProjectComponent.java:184: error: ';' expected
			...		
			   ^
41 errors
